syntax = "proto3";

package broadcast;

import "google/protobuf/timestamp.proto";

option go_package="/src/broadcast";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    google.protobuf.Timestamp last_updated = 4;
}

message Message {
    string id = 1;
    string user_id = 5;
    string chat_id = 2;
    string content = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message Connection {
    User user = 1;
    bool active = 2;
}

message Close {}

service Broadcast {
    rpc Connect (Connection) returns (stream Message);
    rpc BroadcastMessage (Message) returns (Close);
}